Update 1308/ql.java
Co-authored-by: arnica-github-connector[bot] <92469487+arnica-github-connector[bot]@users.noreply.github.com>